plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.flipflick'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		// Spring Boot 3.5.x ↔ Spring Cloud 2025.0.x (Northfields) 호환
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// H2
	runtimeOnly 'com.h2database:h2'

	// MYSQL
	//implementation 'com.mysql:mysql-connector-j:9.1.0'

	// Config Client
	implementation 'org.springframework.cloud:spring-cloud-starter-config'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'



	// WebFlux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
